# orodruin

./: .gitmodules  .mypy.ini  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: main.yml
orodruin/: __init__.py  attribute.py  component.py  exceptions.py  graph.py  graph_manager.py  io.py  library.py  multiport.py  pathed_object.py  port.py  port_collection.py  serialization.py  signal.py  utils.py
orodruin/command/: __init__.py  components.py  connections.py  ports.py  serialization.py
orodruin/commands/: __init__.py  command.py  connections.py
orodruin/commands/components/: __init__.py  create_component.py  delete_component.py  export_component.py  group_components.py  import_component.py  rename_component.py
orodruin/commands/nodes/: __init__.py  create_node.py  delete_node.py  export_node.py  group_nodes.py  import_node.py  rename_node.py
orodruin/commands/ports/: __init__.py  connect_ports.py  create_port.py  delete_port.py  disconnect_ports.py  get_port.py  rename_port.py  set_port.py
orodruin/core/: __init__.py  component.py  connection.py  deserializer.py  graph.py  library.py  node.py  pathed_object.py  scene.py  serializer.py  signal.py  state.py  utils.py
orodruin/core/port/: __init__.py  port.py  types.py
orodruin/core/serialization/: __init__.py  deserializer.py  serializer.py  types.py
orodruin/port/: __init__.py  multi_port.py  port.py  single_port.py  types.py
snippets/: profile_import_node.py
tests/: conftest.py  test_arm_component.py  test_component.py  test_connection.py  test_graph.py  test_graph_manager.py  test_io.py  test_library.py  test_multiport.py  test_port.py  test_port_collections.py  test_serialization.py
tests/TestLibrary/orodruin/: AllPortTypes.json  NestedComponent.json  NestedNode.json  ReferencingNestedComponent.json  ReferencingNestedNode.json  ReferencingSimpleComponent.json  ReferencingSimpleNode.json  SimpleComponent.json  SimpleNode.json  asdf.json
tests/test_commands/: test_command_components.py  test_command_connect_port.py  test_command_connect_ports.py  test_command_create_component.py  test_command_delete_component.py  test_command_disconnect_ports.py  test_command_ports.py  test_command_serialization.py
tests/test_core/: test_component.py  test_connection.py  test_library.py  test_port.py
