[tool.poetry]
name = "orodruin"
version = "0.1.0"
description = "A Python rigging graph library."
license = "LICENSE.md"
authors = ["Aphosis <aphosis.github@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/HolisticCoders/orodruin"
repository = "https://github.com/HolisticCoders/orodruin"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
pylint = "^2.6.0"
isort = "^5.6.4"
pre-commit = "^2.8.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = ["fixme", "import-error", "duplicate-code"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ignore=orodruin/vendor --doctest-modules --cov=orodruin --cov-report html"
testpaths = [
    "tests",
    "orodruin",
]
